# Gouda

./: Cargo.toml  README.md
.cargo/: config.toml
assets/models/: rock.mtl  rock2.mtl  sword.mtl  tree.mtl
crates/flappy/: Cargo.toml
crates/flappy/src/: main.rs
crates/gouda/src/: lib.rs  mouse_capture.rs  window.rs
crates/gouda/src/font_library/: mod.rs
crates/gouda/src/imgui/: platform.rs
crates/gouda/src/platform/metal/: mod.rs  shader.rs
crates/gouda/src/platform/osx/: osx_window.rs
crates/gouda/src/platform/win32/: mod.rs
crates/gouda/src/rendering/: buffers2.rs  sprites.rs
crates/gouda/src/shader_lib/: basic_shader.rs  gui_shader.rs  hex_shader.rs
crates/gouda_ecs/: Cargo.toml
crates/gouda_ecs/src/: genindex.rs  lib.rs
crates/gouda_editor/: Cargo.toml
crates/gouda_editor/src/: editorlayer.rs  lib.rs  main.rs
crates/gouda_editor/src/imgui/: mod.rs  platform.rs  renderer.rs
crates/gouda_images/: Cargo.toml
crates/gouda_images/src/: bmp.rs  lib.rs  png.rs  spritesheet.rs  utils.rs
crates/gouda_imgui/: Cargo.toml
crates/gouda_imgui/src/: lib.rs  platform.rs  renderer.rs  viewport_backend.rs
crates/gouda_input/: Cargo.toml
crates/gouda_input/src/: lib.rs  osx.rs  win32.rs
crates/gouda_internal/: Cargo.toml
crates/gouda_internal/src/: font.rs  input.rs  lib.rs  mouse_capture.rs  window.rs
crates/gouda_internal/src/gui/: button.rs  constraints.rs  mod.rs
crates/gouda_internal/src/images/: bmp.rs
crates/gouda_internal/src/imgui/: mod.rs  platform.rs  renderer.rs
crates/gouda_internal/src/platform/: mod.rs
crates/gouda_internal/src/platform/metal/: texture.rs
crates/gouda_internal/src/platform/osx/: mod.rs  osx_input.rs
crates/gouda_internal/src/platform/win32/: mod.rs  window.rs
crates/gouda_internal/src/rendering/: sprites.rs
crates/gouda_internal/src/shader_lib/: font_shader.rs  mod.rs  obj_model_shader.rs  texture_shader.rs
crates/gouda_layer/: Cargo.toml
crates/gouda_layer/src/: lib.rs
crates/gouda_math/: Cargo.toml
crates/gouda_math/src/: lib.rs
crates/gouda_platform/: Cargo.toml
crates/gouda_platform/src/: input.rs  lib.rs  window.rs
crates/gouda_platform/src/osx/: mod.rs  osx_input.rs  osx_window.rs
crates/gouda_platform/src/win32/: mod.rs
crates/gouda_rendering/: Cargo.toml
crates/gouda_rendering/src/: buffers.rs  buffers2.rs  camera.rs  drawable.rs  font.rs  lib.rs  material_library.rs  model.rs  obj.rs  shaders.rs  shapes.rs  sprites.rs  texture_library.rs
crates/gouda_rendering/src/font_library/: mod.rs
crates/gouda_rendering/src/platform/: mod.rs
crates/gouda_rendering/src/platform/d3d11/: buffers.rs  mod.rs  shader.rs  texture.rs
crates/gouda_rendering/src/platform/d3d12/: mod.rs  shader.rs  texture.rs
crates/gouda_rendering/src/platform/metal/: buffers.rs  mod.rs  shader.rs  texture.rs
crates/gouda_rendering/src/shader_lib/: basic_shader.rs  font_shader.rs  gui_shader.rs  hex_shader.rs  imgui_shader.rs  mod.rs  obj_model_shader.rs  quad_shader.rs  texture_shader.rs
crates/gouda_transform/: Cargo.toml
crates/gouda_transform/src/: lib.rs
crates/gouda_types/: Cargo.toml
crates/gouda_types/src/: lib.rs
crates/gouda_window/: Cargo.toml
crates/gouda_window/src/: lib.rs  osx.rs  win32.rs
crates/ogltutorialtest/: Cargo.toml
crates/ogltutorialtest/src/: main.rs
crates/perlintest/: Cargo.toml
crates/perlintest/src/: main.rs  terrain.rs
crates/pong/: Cargo.toml
crates/pong/src/: main.rs
crates/sandbox/: Cargo.toml
crates/sandbox/assets/entities/: spawner.gde  wolf.gde
crates/sandbox/assets/resources/: meshes.gdr
crates/sandbox/src/: building.rs  camera.rs  cursor.rs  gui.rs  hearth.rs  main.rs  main_menu.rs  monster.rs  player.rs  spawners.rs  start_menu.rs  supplies.rs  tilemap.rs  tree.rs  turret.rs  villager.rs
res/bitmap/: .spritesheet1.png.swp
res/shaders/: fontFragmentShader.txt  fontVertexShader.txt  textureVertexShader.txt
sandbox/: Cargo.toml
sandbox/shaders/: blueFragmentShader.txt  blueFragmentShader.txt.d3d  blueVertexShader.txt  blueVertexShader.txt.d3d  fontFragmentShader.txt  fontFragmentShader.txt.d3d  fontShader.txt  fontVertexShader.txt  fontVertexShader.txt.d3d  fragmentShader.txt  guiFragmentShader.txt  guiFragmentShader.txt.d3d  guiVertexShader.txt  quadFragmentShader.txt  quadFragmentShader.txt.d3d  quadVertexShader.txt  quadVertexShader.txt.d3d  testFragmentShader.txt.d3d  testVertexShader.txt.d3d  textureFragmentShader.txt  textureFragmentShader.txt.d3d  textureShader.txt  textureVertexShader.txt  textureVertexShader.txt.d3d  vertexShader.txt
sandbox/src/: building.rs  camera.rs  cursor.rs  game_stage.rs  gui.rs  hearth.rs  main.rs  main_menu.rs  monster.rs  player.rs  spawners.rs  start_menu.rs  supplies.rs  tilemap.rs  tree.rs  turret.rs  villager.rs
src/: bmp.rs  camera.rs  ecs.rs  font.rs  genindex.rs  input.rs  lib.rs  math.rs  mouse_capture.rs  png.rs  types.rs  utils.rs  window.rs
src/font_library/: mod.rs
src/gui/: constraints.rs  mod.rs  slider.rs
src/images/: bmp.rs  mod.rs  png.rs  spritesheet.rs
src/imgui/: renderer.rs
src/platform/: mod.rs
src/platform/d3d/: buffers.rs  mod.rs  shader.rs
src/platform/d3d11/: buffers.rs  mod.rs  shader.rs  texture.rs
src/platform/metal/: buffers.rs  drawable.rs  mod.rs  shader.rs  texture.rs
src/platform/osx/: cocoa_window.rs  mod.rs  osx_input.rs  osx_window.rs
src/platform/win32/: mod.rs  win32_input.rs  window.rs
src/rendering/: drawable.rs  mod.rs  model.rs  shapes.rs  sprites.rs
src/shader_lib/: basic_shader.rs  font_shader.rs  gui_shader.rs  hex_shader.rs  imgui_shader.rs  mod.rs  obj_model_shader.rs  quad_shader.rs  texture_shader.rs
