[package]
name = "gouda"
version = "0.1.0"
authors = ["Aengus McMillin <aengusmcmillin@gmail.com>"]
edition = "2018"

[dependencies]
anymap = "0.12.1"
enum-map = "*"
enum-map-derive = "*"
compress = "0.1.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
cocoa = "0.19.0"
metal = "0.17.0"
objc = "0.2.2"
coreaudio-sys = "0.2"
core-graphics = "0.17.3"

[lib]
name = "gouda"

