[package]
name = "gouda"
version = "0.1.0"
authors = ["Aengus McMillin <aengusmcmillin@gmail.com>"]
edition = "2018"
exclude = ["crates/"]

[workspace]
members = ["crates/*"]

[dependencies]
gouda_ecs = { path = "./crates/gouda_ecs" }
gouda_internal = { path = "./crates/gouda_internal" }
gouda_transform = { path = "./crates/gouda_transform" }
gouda_rendering = { path = "./crates/gouda_rendering" }
gouda_types = { path = "./crates/gouda_types" }
gouda_images = { path = "./crates/gouda_images" }
gouda_platform = { path = "./crates/gouda_platform" }
gouda_window = { path = "./crates/gouda_window" }
gouda_input = { path = "./crates/gouda_input" }