[package]
name = "gouda_internal"
version = "0.1.0"
authors = ["Aengus McMillin <aengusmcmillin@gmail.com>"]
edition = "2018"

[dependencies]
anymap = "0.12.1"
gouda_ecs = { path = "../gouda_ecs" }
gouda_transform = { path = "../gouda_transform" }
gouda_rendering = { path = "../gouda_rendering" }
gouda_types = { path = "../gouda_types" }
gouda_images = { path = "../gouda_images" }
gouda_math = { path = "../gouda_math" }
gouda_platform = { path = "../gouda_platform" }
enum-map = "*"
enum-map-derive = "*"
compress = "0.1.2"
cgmath = "0.18.0"
imgui = "0.8.2"
