[package]
name = "gouda_rendering"
version = "0.0.0"
authors = ["Aengus McMillin <aengusmcmillin@gmail.com>"]
edition = "2018"

[dependencies]
cgmath = "0.18.0"
gouda_math = { path = "../gouda_math" }
gouda_images = { path = "../gouda_images" }
gouda_ecs = { path = "../gouda_ecs" }
gouda_transform = { path = "../gouda_transform" }
gouda_window = { path = "../gouda_window" }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
cocoa = "0.19.0"
metal = "0.17.0"
objc = "0.2.2"
core-graphics = "0.17.3"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.8", features = ["dxgi", "dxgi1_2", "dxgi1_4", "d3d11", "d3d12", "d3dcompiler", "std", "winuser", "libloaderapi", "winstring", "memoryapi", "dsound", "fileapi", "winbase", "xinput", "errhandlingapi", "ntdef", "handleapi", "windowsx"] }


[features]
default = []
use_d3d12 = []